src/test/resources/Parser/SyntaxErrors/TwiceDefinedLocalVariable.front
class A {

    void test(A[] i) {
        int32 i := 0;
    }

}